# projetopengl

./: CMakeLists.txt
SDL/lib/: libSDL-1.2.so.0.11.4  libSDL.la  libSDLmain.la
src/: Makefile  Mnt.cpp  Mnt.hpp  apres.mnt  debut.mnt  princ  readText.cpp  readText.hpp  test.cpp
