PROJECT(OpenGL)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(GLUT)
FIND_PACKAGE(OpenGL)
SET(CMAKE_REQUIRED_LIBRARIES ${GLUT_LIBRARY} ${GL_LIBRARY})
include_directories(${OPENGL_INCLUDE_DIR})
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
set (EXECUTABLE_OUTPUT_PATH ../bin)
ADD_DEFINITIONS(-Wall -std=gnu++0x -ggdb )
ADD_EXECUTABLE (princ src/test.cpp)
INCLUDE_DIRECTORIES(SDL/includes)
link_directories(./SDL/lib)
TARGET_LINK_LIBRARIES(princ SDL)
TARGET_LINK_LIBRARIES(princ ${OPENGL_LIBRARIES})

