PROJECT(OpenGL)

FIND_PACKAGE(SDL REQUIRED)

FIND_PACKAGE(GLUT)

FIND_PACKAGE(OpenGL)

FILE( 
GLOB_RECURSE
source_files
src/*.cpp
)

SET(CMAKE_REQUIRED_LIBRARIES ${GLUT_LIBRARY} ${GL_LIBRARY})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET (EXECUTABLE_OUTPUT_PATH ../bin)
ADD_DEFINITIONS(-Wall -std=gnu++0x -ggdb )
ADD_EXECUTABLE (princ ${source_files})
INCLUDE_DIRECTORIES(SDL/includes)
LINK_DIRECTORIES(SDL/lib)
TARGET_LINK_LIBRARIES(princ SDL)
TARGET_LINK_LIBRARIES(princ ${OPENGL_LIBRARIES})

